repo/components/mysql/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql
  labels:
    app.kubernetes.io/part-of: rhtas-demo
    app.kubernetes.io/component: mysql
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
