repo/components/mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-cluster
  namespace: mysql
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
  clusterIP: None
